<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PPS UnitInfo</string>
    <string name="app_label">PPS UnitInfo</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="title_activity_unitlist">Lista jednostek</string>
    <string name="title_activity_unitdetails">Dane szczegółowe</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="err_apprequiresnetwork">Aplikacja wymaga polaczenia internetowego do inicjalizacji</string>
    <string name="info_appcheckupdate">Sprawdzam aktualizacje</string>
    <string name="info_appdownloaddatabasefile">Pobieranie pliku bazy danych</string>
    <string name="info_copydatabasefile">Kopiowanie pliku bazy danych</string>
    
    <string name="empty_geodata">Brak danych geolokalizacyjnych</string>
    <string name="no_app_email">Brak aplikacji do obsługi poczty elektronicznej</string>
    <string name="no_map_app">Brak aplikacji do obsługi map</string>
    <string name="no_www_app">Brak aplikacji do obsługi stron www</string>
    <string name="no_dial_app">Brak aplikacji do obsługi rozmów telefonicznych</string>
    
    <string name="menu_about">O programie</string>
    <string name="unitslist_hint">Wyszukaj jednostkę</string>
    <string name="dialog_about_info">Aplikacja prezentuje w przystępny sposób dane teleadresowe polskich jednostek penitencjarnych.\nDane aktualizowane są na podstawie informacji zamieszczonych na stronie http://sw.gov.pl.</string>
    <string name="copying">Copyright &#169; 2012 &#8211; 2013 Marcin Kunicki\nmasel.popowo@gmail.com</string>
    <string name="dialog_changelog_title">Aktualizacja</string>
    <string name="button_ok">OK</string>
    <string name="button_download">Pobierz</string>
    <string name="button_update">Aktualizuj</string>
    <string name="button_cancel">Anuluj</string>
    <string name="emptyDescription">Brak skróconego opisu jednostki</string>
    <string name="fullDescriptionLink">Pełny opis</string>
    
    <string name="tab_title_address">Dane teleadresowe</string>
    <string name="tab_title_leaders">Kierownictwo</string>
    <string name="tab_title_phones">Ważne telefony</string>
    
    <string name="openImageLink">Wyświetl zdjęcie</string>
    <string name="openMapLink">Wskazówki dojazdu</string>
    <string name="saveInContactLink">Zapisz w kontaktach</string>
    <string name="err_nonetwork">Brak połączenia internetowego</string>
    
    <string name="landline_phone_format">(%1$s) %2$s-%3$s-%4$s</string>
    <string name="extension_phone_fromat">(%1$s) %2$s-%3$s-%4$s wewn. %5$s</string>
    <string name="cell_phone_format">%1$s-%2$s-%3$s</string>
    <string name="fax_landline_phone_format">fax (%1$s) %2$s-%3$s-%4$s</string>
    
    <string name="action_about">O programie</string>
    <string name="action_search">Wyszukaj jednostkę</string>
    <string name="action_allunits">Pokaż wszystkie</string>
    <string name="action_www">Strona WWW</string>
    
    <string name="drawer_header_unittype">Filtruj wg typów</string>
    <string name="drawer_list_allunits">Wszystkie</string>
    <string name="open_drawer">Otwórz panel</string>
    <string name="close_drawer">Zamknij panel</string>
    
    <string name="contentdescription_unitimage">Zdjęcie jednostki</string>

</resources>