<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pps="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        pps:showAsAction="ifRoom|collapseActionView"
        pps:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_allunits"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_allunits"
        pps:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_about"
        pps:showAsAction="ifRoom|withText"/>

</menu>