<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:orientation="vertical" >

        <!-- Panel z nazwa jednostki -->

        <LinearLayout
            android:id="@+id/panel_unitname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_background"
            android:orientation="vertical"
            android:paddingLeft="@dimen/panel_left_padding"
            android:paddingRight="@dimen/panel_right_padding" >

            <TextView
                android:id="@+id/text_unitname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/unitname_bottom_margin"
                android:gravity="left"
                android:textSize="@dimen/unitname_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_unitparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="right"
                android:textSize="@dimen/unitparent_text_size" />

            <View
                android:id="@+id/line_unitname"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/line_top_margin"
                android:background="@color/bottom_line" />

            <TextView
                android:id="@+id/link_openimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:clickable="true"
                android:drawableRight="@drawable/ic_content_picture"
                android:gravity="center_vertical"
                android:text="@string/openImageLink"
                android:textColor="@color/link" />
        </LinearLayout>

        <!-- Panel ze zdjeciem -->

        <LinearLayout
            android:id="@+id/panel_unitimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_background"
            android:orientation="vertical"
            android:paddingLeft="@dimen/panel_left_padding"
            android:paddingRight="@dimen/panel_right_padding"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/progerss_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/unitimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:contentDescription="@string/contentdescription_unitimage" />
        </LinearLayout>

        <!-- Panele z adresem jednostki, telefonami, adresami email, strona www -->

        <Button
            android:id="@+id/button_location"
            android:drawableLeft="@drawable/ic_location"
            style="@style/ButtonUnit" >
        </Button>

        <LinearLayout
            android:id="@+id/group_phones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_emails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
        
        <Button
            android:id="@+id/button_www"
            android:drawableLeft="@drawable/ic_location_web_site"
            android:text="@string/action_www"
            style="@style/ButtonUnit" >
        </Button>

        <!-- Panel z opisem jednostki -->

        <LinearLayout
            android:id="@+id/panel_unitdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_background"
            android:orientation="vertical"
            android:paddingLeft="@dimen/panel_left_padding"
            android:paddingRight="@dimen/panel_right_padding" >

            <TextView
                android:id="@+id/text_unitdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>